# cgmm

./: .bumpversion.toml  .coveragerc  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
cgmm/: __init__.py  base.py  conditional_regressor.py  conditioner.py  container.py  discriminative.py  distributions.py  gh.py  moe.py  regressor.py  student_t.py
docs/: api.md  conf.py  conventions.md  getting-started.md  index.md
docs/examples/: amsterdam_weather_analysis.ipynb  amsterdam_weather_analysis_knmi.ipynb  conditional_2d_gmm.ipynb  debug_discriminative_model.ipynb  digits_conditional_modeling.ipynb  heavy_tailed_regression.ipynb  iris_conditional_gmm.ipynb  regression_models_and_datasets.ipynb  vix_predictor.ipynb
docs/examples/data/: VIX_History.csv  amsterdam_hourly.csv  amsterdam_hourly.md  amsterdam_knmi_hourly.csv
docs/examples/gallery_images/: make_gif.ipynb
tests/: conftest.py  test_base_machinery.py  test_branch_coverage.py  test_condition_method.py  test_conditioner_unit.py  test_discriminative.py  test_documented_api.py  test_interop_pipeline.py  test_moe.py  test_parameter_validation.py  test_phase1_mixture.py  test_phase2_student_t.py  test_phase3_student_t_mixture.py  test_phase4_conditioner.py  test_phase5_conditional_regressors.py  test_phase5_moe_student_t.py  test_phase6_gh.py  test_phase6_gh_mixture.py  test_predict_methods.py  test_regressor_multivar.py  test_regressor_single_row.py  test_sanity.py  test_sklearn_compatibility.py  test_sklearn_interface.py  test_sklearn_interface_compliance.py
tools/: README_weather_sources.md  compare_weather_sources.py  download_amsterdam_weather_simple.py  download_data_weather.py  download_knmi_weather.py  download_visual_crossing_weather.py  make_example_notebook.py  test_weather_sources.py
