[tool.poetry]
name = "cgmm"
version = "0.3.2"
description = "Conditional Gaussian Mixture Models compatible with scikit-learn"
authors = ["Thijs van den Berg <thijs@sitmo.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sitmo/cgmm"
repository = "https://github.com/sitmo/cgmm"
keywords = ["gaussian mixture", "scikit-learn", "conditional"]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "*"
scipy = "*"
scikit-learn = "*"

# docs-only, marked optional
sphinx = { version = ">=7", optional = true }
myst-nb = { version = ">=1.1", optional = true }
furo = { version = ">=2024.8", optional = true }
sphinx-copybutton = { version = ">=0.5.2", optional = true }
matplotlib = { version = ">=3.8", optional = true }
pandas = {version = "^2.3",  optional = true }

# --- development tools (installed via --with dev) ---
[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7"
bump-my-version = "^1.2.1"
ruff = "^0.5"
black = "^24.0"
pytest = "^8.0"
pytest-cov = "^6.2.1"
coverage = "^7.10.6"
scikit-learn = {version = ">=1.7,<2.0", markers = "python_version >= \"3.10\""}

[tool.poetry.extras]
docs = ["sphinx", "myst-nb", "furo", "sphinx-copybutton", "matplotlib", "pandas"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
