[tool.poetry]
name = "cgmm"
version = "0.5.0"
description = "Conditional Gaussian Mixture Models compatible with scikit-learn"
authors = ["Thijs van den Berg <thijs@sitmo.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sitmo/cgmm"
repository = "https://github.com/sitmo/cgmm"
keywords = ["gaussian mixture", "scikit-learn", "conditional"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]


[tool.poetry.dependencies]
python = ">=3.10,<3.15"
numpy = "*"
scipy = "*"
scikit-learn = ">=1.7,<2.0"

# docs-only, marked optional
sphinx = { version = ">=7", optional = true }
myst-nb = { version = ">=1.1", optional = true }
furo = { version = ">=2024.8", optional = true }
sphinx-copybutton = { version = ">=0.5.2", optional = true }
matplotlib = { version = ">=3.8", optional = true }
pandas = {version = "^2.3",  optional = true }

# --- development tools (installed via --with dev) ---
[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7"
bump-my-version = "^1.2.1"
ruff = "^0.5"
black = "^24.0"
pytest = "^8.0"
pytest-cov = "^6.2.1"
coverage = "^7.10.6"

[tool.poetry.extras]
docs = ["sphinx", "myst-nb", "furo", "sphinx-copybutton", "matplotlib", "pandas"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
